# imap2slack

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: config.rs  main.rs  slack.rs
src/config/: default.rs  filter.rs  mod.rs
src/imap_extention/: fetch.rs  folder.rs  mod.rs  path.rs  search.rs
