[package]
name = "imap2slack"
version = "0.1.4"
authors = ["nn <nn@nn.nn>"]

[dependencies]
log = "*"
simple_logger = "*"
imap = '*'
native-tls = "*"
mailparse = "*"
regex = "*"
quoted_printable = "*"
slack-hook = "*"
url = "*"
toml = { git = "https://github.com/dvaerum/toml-rs.git" }
serde = "*"
serde_derive = "*"
lazy_static = "*"
dirs = "*"
chrono = "*"